[package]
name = "puniyu_skia"
version = "0.5.1"
description = "puniyu应用skia使用"
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu/skia"
repository = "https://github.com/puniyu/skia"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
skia-safe = { version = "0.90.0", features = ["textlayout"] }
thiserror = "2"
